# IconConverter

./: CMakeLists.txt  CMakePresets.json  IconConverter.sln  packages.config
IconConverter/: IconConverter.csproj  Program.cs
powershell/: convert_to_icon.ps1
previous/gdiplus/: CMakeLists.txt
previous/gdiplus/src/: main.cxx
previous/wic/: CMakeLists.txt
previous/wic/src/: IconConverter.cxx  IconConverter.hxx
script/: my_converter.ps1
src/: IconConverter.cxx  IconConverter.hxx  helpers.cxx  helpers.hxx  main.cxx
